# apps/api/src/modules/applications/applications.dto.ts
@@ -1,0 +1,29 @@
+import { ApiProperty, ApiPropertyOptional } from '@nestjs/swagger';
+import { ApplicationStatus } from '@prisma/client';
+import { IsEnum } from 'class-validator';
+
+export class ApplicationDto {
+  @ApiProperty()
+  id!: string;
+
+  @ApiProperty()
+  userId!: string;
+
+  @ApiPropertyOptional({ nullable: true, type: String })
+  ariveLoanId!: string | null;
+
+  @ApiProperty({ enum: ApplicationStatus })
+  status!: ApplicationStatus;
+
+  @ApiProperty()
+  createdAt!: string;
+
+  @ApiProperty()
+  updatedAt!: string;
+}
+
+export class UpdateApplicationStatusDto {
+  @ApiProperty({ enum: ApplicationStatus })
+  @IsEnum(ApplicationStatus)
+  status!: ApplicationStatus;
+}
